<resources>
    <string name="app_name">Squish the bugs</string>
    <string name="game">Game</string>
    <string name="shop">Shop</string>
    <string name="squish_the_bugs">Squish the bugs</string>
    <string name="play">Play</string>
    <string name="TODO">todo</string>
    <string name="login">Login</string>
    <string name="sound">Sound</string>
    <string name="on">On</string>
    <string name="vibrate">Vibrate</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="mod">Mod :</string>
    <string name="main_menu">Main Menu</string>
    <string name="start_game">Start</string>
    <string name="running_bugs">Running Bugs</string>
    <string name="jumping_bugs">Jumping Bugs</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="hidden_text">This interesting game is created for you. Squish the bugs and enjoy the process.</string>
    <string name="vibration">Vibration</string>
    <string name="settings">Settings</string>
    <string name="information">Information</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="difficulty">Difficulty :</string>
    <string name="nickname">Nickname</string>
    <string name="register">Register</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_address">Email address</string>
    <string name="birthday">Birthday</string>
    <string name="coins">Coins :</string>
    <string name="heart">heart</string>
    <string name="tap_to_start">Tap to Start</string>
    <string name="timer_0_00">Timer:0:00</string>
    <string name="todo">description</string>
    <string name="main">Main</string>
    <string name="retry">Retry</string>
    <string name="game_over">Game Over</string>
    <string name="you_lose">You Lose!</string>
    <string name="total_coins">Total Coins :</string>
    <string name="mods">Mods :</string>
    <string name="short_game">Short game</string>
    <string name="long_game">Long game</string>
</resources>
