<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".PlayActivity">

    <TextView
        android:id="@+id/text_play"
        android:layout_width="91dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/play"
        android:textColor="@color/colorButtonText"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_difficulty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="204dp"
        android:layout_height="0dp"
        android:layout_marginBottom="113dp"
        android:background="@drawable/roundedbutton"
        android:fontFamily="@font/bevan"
        android:text="@string/start_game"
        android:textAllCaps="false"
        android:textColor="@color/colorButtonText"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_mod" />

    <RadioGroup
        android:id="@+id/group_difficulty"
        android:layout_width="180dp"
        android:layout_height="171dp"
        android:layout_marginBottom="65dp"
        app:layout_constraintBottom_toTopOf="@+id/group_mod"
        app:layout_constraintStart_toStartOf="@+id/text_mod"
        app:layout_constraintTop_toBottomOf="@+id/text_difficulty">

        <RadioButton
            android:id="@+id/easy"
            android:layout_width="164dp"
            android:layout_height="58dp"
            android:background="@android:color/holo_green_dark"
            android:text="@string/easy"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/medium"
            android:layout_width="164dp"
            android:layout_height="58dp"
            android:background="@android:color/holo_orange_dark"
            android:text="@string/medium"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/hard"
            android:layout_width="164dp"
            android:layout_height="58dp"
            android:background="@android:color/holo_red_dark"
            android:text="@string/hard"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RadioGroup>

    <TextView
        android:id="@+id/text_difficulty"
        android:layout_width="165dp"
        android:layout_height="45dp"
        android:layout_marginBottom="4dp"
        android:text="@string/difficulty"
        android:textColor="@color/colorButtonText"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/group_difficulty"
        app:layout_constraintEnd_toEndOf="@+id/group_difficulty"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/group_difficulty"
        app:layout_constraintTop_toBottomOf="@+id/text_play" />

    <TextView
        android:id="@+id/text_mod"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="343dp"
        android:layout_marginBottom="242dp"
        android:text="@string/mod"
        android:textColor="@color/colorButtonText"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_return"
        app:layout_constraintEnd_toStartOf="@+id/text_play"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/group_mod"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/group_mod"
        android:layout_width="204dp"
        android:layout_height="83dp"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="49dp"
        android:layout_marginBottom="43dp"
        android:background="@android:color/holo_blue_light"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_difficulty">

        <RadioButton
            android:id="@+id/jumping_bugs"
            android:layout_width="212dp"
            android:layout_height="51dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/jumping_bugs"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/running_bugs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/running_bugs"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RadioGroup>

    <ImageButton
        android:id="@+id/button_return"
        android:layout_width="53dp"
        android:layout_height="0dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="54dp"
        android:background="@color/colorGreenBackground"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/text_mod"
        app:srcCompat="@android:drawable/ic_menu_revert" />

</androidx.constraintlayout.widget.ConstraintLayout>