<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".SquishGameActivity">

    <FrameLayout
        android:id="@+id/frameLayout_game_squish"
        android:layout_width="411dp"
        android:layout_height="0dp"
        android:layout_marginTop="91dp"
        android:layout_marginBottom="17dp"
        app:layout_constraintBottom_toTopOf="@+id/count_down_game_squish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/bug_game_squish"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/black_bug" />

        <TextView
            android:id="@+id/start_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tap_to_start"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/zvuv_maniak_game_squish"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:srcCompat="@drawable/zvuv_maniak"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/dvora_toxic_game_squish"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:srcCompat="@mipmap/dvora_toxic_foreground"
            android:contentDescription="@string/todo" />
    </FrameLayout>

    <ImageView
        android:id="@+id/heart3"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginBottom="55dp"
        android:contentDescription="@string/heart"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout_game_squish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/heart2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/heart_foreground" />

    <ImageView
        android:id="@+id/heart2"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="55dp"
        android:contentDescription="@string/heart"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout_game_squish"
        app:layout_constraintEnd_toStartOf="@+id/heart3"
        app:layout_constraintStart_toEndOf="@+id/heart1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/heart_foreground" />

    <ImageView
        android:id="@+id/heart1"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="55dp"
        android:contentDescription="@string/heart"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout_game_squish"
        app:layout_constraintEnd_toStartOf="@+id/heart2"
        app:layout_constraintStart_toEndOf="@+id/coins_game_squish"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/heart" />

    <TextView
        android:id="@+id/coins_game_squish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="165dp"
        android:layout_marginRight="165dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/todo"
        android:text="@string/coins"
        android:textColor="@color/colorButtonText"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout_game_squish"
        app:layout_constraintEnd_toStartOf="@+id/heart1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/count_down_game_squish"
        android:layout_width="173dp"
        android:layout_height="40dp"
        android:layout_marginBottom="30dp"
        android:text="@string/timer_0_00"
        android:textColor="@color/colorButtonText"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout_game_squish" />

</androidx.constraintlayout.widget.ConstraintLayout>